# Social-Media-Manager

./: .gitignore  README.md  main.py
docs/: .~lock.ProjectSynopsis.doc#  .~lock.StatusTracker.xlsx#  StatusTracker.xlsx  TestPlan.csv  TestPlan.xls
ml-service/: .gitignore  documentation.md  pyproject.toml
ml-service/models/: model_columns.joblib  rf_engagement_model.joblib
ml-service/src/: .env.example  api.py  data_loader.py  features.py  find_models.py  model.py  retrain_model.py  sync_db.py  trend_ingestor.py  vector_store.py
ml-service/src/ml_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ml-service/tests/: conftest.py  test_api.py  test_data_loader.py  test_features.py  test_model.py  test_trend_ingestor.py
scripts/: generate_test_data.py  test_live_simulation.py
src/: package-lock.json  package.json
src/Backend/: main.py  requirements.txt
src/Backend/core/: config.py
src/Backend/models/: ga_models.py
src/Backend/routes/: ga_routes.py  yt_routes.py
src/Backend/services/: ga_service.py  yt_service.py
src/Backend/tests/: test_ga_routes.py  test_yt_routes.py
src/Frontend/: package-lock.json
src/backend/: \  debug_db.py  main.py  requirements.txt
src/backend/core/: config.py  database.py  security.py
src/backend/models/: channel_models.py  competitor_models.py  ig_models.py  li_models.py  social_insights_models.py  (+5 more)
src/frontend/: .env.example  README.md  package-lock.json  package.json
stub_server/: README.md  main.py  requirements.txt
stub_server/app/: database.py
stub_server/scripts/: csv_import.py
(+123 files in other folders)
