[project]
name = "ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "google-genai>=1.73.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "pytrends>=4.9.2",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "textblob>=0.20.0",
    "uvicorn>=0.44.0",
]
